--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ categories = ["network-programming", "web-programming::http-client", "wasm"]
 members = [".", "greentic-distributor-dev"]
 resolver = "2"
 
+[workspace.dependencies]
+tempfile = "3"
+
 [dependencies]
 async-trait = "0.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
