--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,9 +8,29 @@ on:
       - "v*"
 
 jobs:
+  checks:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
+      - name: Cache cargo
+        uses: Swatinem/rust-cache@v2
+      - name: Format check
+        run: cargo fmt --all -- --check
+      - name: Clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+      - name: Tests
+        run: cargo test --workspace --locked
+
   publish-crates-io:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' || startswith(github.ref, 'refs/tags/v')
+    needs: checks
     steps:
       - uses: actions/checkout@v4
       - name: Set up Rust
@@ -24,11 +44,26 @@ jobs:
         run: cargo package --locked -p greentic-distributor-client
       - name: Package check (dev)
         run: cargo package --locked -p greentic-distributor-dev
-      - name: Publish client
+      - name: Publish crates (skip if already uploaded)
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish --locked -p greentic-distributor-client
-      - name: Publish dev
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish --locked -p greentic-distributor-dev
+        run: |
+          set -eo pipefail
+          publish() {
+            local pkg=$1
+            echo "Publishing ${pkg}..."
+            set +e
+            output=$(cargo publish --locked -p "${pkg}" 2>&1)
+            status=$?
+            set -e
+            printf '%s\n' "$output"
+            if [ $status -ne 0 ]; then
+              if echo "$output" | grep -qi "already uploaded"; then
+                echo "${pkg} already published; skipping."
+              else
+                exit $status
+              fi
+            fi
+          }
+          publish greentic-distributor-client
+          publish greentic-distributor-dev
