--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "greentic-distributor-client"
-version = "0.4.2"
+version = "0.4.4"
 edition = "2024"
-description = "Client trait plus HTTP and WIT implementations for the greentic:distributor-api@1.0.0 distributor resolver."
+description = "WIT-based client for the greentic:distributor-api@1.0.0 distributor resolver."
 license = "MIT"
 repository = "https://github.com/greentic/greentic-distributor-client"
 homepage = "https://github.com/greentic"
 readme = "README.md"
-keywords = ["greentic", "distributor", "wasm", "wit", "http"]
-categories = ["network-programming", "web-programming::http-client", "wasm"]
+keywords = ["greentic", "distributor", "wasm", "wit"]
+categories = ["network-programming", "wasm"]
+
+[features]
+default = []
+http-runtime = ["reqwest"]
 
 [workspace]
 members = [".", "greentic-distributor-dev"]
@@ -24,10 +28,9 @@ greentic-distributor-client = { path = ".", version = "0.4.1" }
 
 [dependencies]
 async-trait = "0.1"
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-schemars = "1"
 thiserror = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 anyhow = "1"
