--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.4.11"
+version = "0.4.12"
 edition = "2024"
 
 [package]
@@ -17,6 +17,7 @@ categories = ["network-programming", "wasm"]
 [features]
 default = []
 http-runtime = ["reqwest"]
+oci-components = ["dirs-next", "oci-distribution", "sha2"]
 
 [workspace]
 members = [".", "greentic-distributor-dev"]
@@ -28,15 +29,19 @@ greentic-distributor-client = { path = ".", version = "0.4" }
 
 [dependencies]
 async-trait = "0.1"
-reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
+reqwest = { version = "0.13", features = ["json", "query", "rustls"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 anyhow = "1"
-greentic-types = { version = "0.4.23", features = ["schema"] }
-greentic-interfaces-guest = { version = "0.4.65", features = ["distributor-api", "distributor-api-imports"] }
+greentic-types = { version = "0.4", features = ["schema"] }
+greentic-interfaces-guest = { version = "0.4", features = ["distributor-api", "distributor-api-imports"] }
 greentic-config-types = "0.4"
 semver = "1"
+oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }
+sha2 = { version = "0.10", optional = true }
+dirs-next = { version = "2", optional = true }
 [dev-dependencies]
 httpmock = "0.8"
+tempfile = { workspace = true }
