--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.4.12"
+version = "0.4.13"
 edition = "2024"
 
 [package]
@@ -18,6 +18,8 @@ categories = ["network-programming", "wasm"]
 default = []
 http-runtime = ["reqwest"]
 oci-components = ["dirs-next", "oci-distribution", "sha2"]
+dist-client = ["oci-components", "reqwest"]
+dist-cli = ["clap", "dist-client"]
 
 [workspace]
 members = [".", "greentic-distributor-dev"]
@@ -29,7 +31,7 @@ greentic-distributor-client = { path = ".", version = "0.4" }
 
 [dependencies]
 async-trait = "0.1"
-reqwest = { version = "0.13", features = ["json", "query", "rustls"], optional = true }
+reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2"
@@ -42,6 +44,18 @@ semver = "1"
 oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }
 sha2 = { version = "0.10", optional = true }
 dirs-next = { version = "2", optional = true }
+clap = { version = "4", features = ["derive"], optional = true }
 [dev-dependencies]
 httpmock = "0.8"
 tempfile = { workspace = true }
+assert_cmd = "2"
+
+[[bin]]
+name = "greentic-dist"
+path = "src/bin/greentic-dist.rs"
+required-features = ["dist-cli"]
+
+[[bin]]
+name = "greentic-distributor-client"
+path = "src/bin/greentic-distributor-client.rs"
+required-features = ["dist-cli"]
