--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [workspace.package]
-version = "0.4.16"
+version = "0.4.17"
 edition = "2024"
 
 [package]
 name = "greentic-distributor-client"
-version = "0.4.12"
+version.workspace=true
 edition = "2024"
 description = "WIT-based client for the greentic:distributor-api@1.0.0 distributor resolver."
 license = "MIT"
 repository = "https://github.com/greentic/greentic-distributor-client"
-homepage = "https://github.com/greentic"
+homepage = "https://gihub.com/greentic"
 readme = "README.md"
 keywords = ["greentic", "distributor", "wasm", "wit"]
 categories = ["network-programming", "wasm"]
