--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.4.19"
+version = "0.4.20"
 edition = "2024"
 
 [package]
@@ -15,7 +15,7 @@ keywords = ["greentic", "distributor", "wasm", "wit"]
 categories = ["network-programming", "wasm"]
 
 [features]
-default = []
+default = ["dist-cli"]
 http-runtime = ["reqwest"]
 oci-components = ["dirs-next", "oci-distribution", "sha2"]
 dist-client = ["oci-components", "reqwest"]
