--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.4.23"
+version = "0.4.25"
 edition = "2024"
 
 [package]
@@ -19,6 +19,7 @@ default = ["dist-cli"]
 http-runtime = ["reqwest"]
 oci-components = ["dirs-next", "oci-distribution", "sha2"]
 pack-fetch = ["dirs-next", "oci-distribution", "sha2"]
+runner-api = ["dirs-next", "oci-distribution", "sha2"]
 dist-client = ["oci-components", "reqwest", "pack-fetch"]
 dist-cli = ["clap", "dist-client", "pack-fetch"]
 
